<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddDietActivity"
    android:background="#00549f">

    <TextView
        android:text="@string/title_activity_add_diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/randomString1"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:singleLine="true"
        android:textSize="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/food"
        android:layout_below="@+id/randomString1"
        android:layout_marginTop="24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:layout_toEndOf="@+id/textView11"
        android:layout_toRightOf="@+id/textView11"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calories"
        android:layout_below="@+id/food"
        android:layout_marginTop="31dp"
        android:layout_alignRight="@+id/food"
        android:layout_alignEnd="@+id/food"
        android:inputType="text"
        android:layout_toRightOf="@+id/textView11"
        android:layout_toEndOf="@+id/textView11"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#f68c4e"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:id="@+id/textView10"
        android:layout_alignBaseline="@+id/food"
        android:layout_alignBottom="@+id/food"
        android:layout_above="@+id/calories"
        android:layout_alignRight="@+id/textView11"
        android:layout_alignEnd="@+id/textView11"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:id="@+id/textView11"
        android:layout_alignBaseline="@+id/calories"
        android:layout_alignBottom="@+id/calories"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:src="@drawable/eat"
        android:layout_below="@+id/add" />

</RelativeLayout>