<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddSleepActivity"
    android:background="#00549f">

    <TextView
        android:text="@string/title_activity_add_sleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/randomString3"
        android:textColor="#ffffff"
        android:textSize="21dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sleep"
        android:layout_below="@+id/randomString3"
        android:layout_marginTop="31dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:layout_toRightOf="@+id/textView24"
        android:layout_toEndOf="@+id/textView24"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add"
        android:layout_below="@+id/sleep"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:background="#f68c4e"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:id="@+id/textView24"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBaseline="@+id/sleep"
        android:layout_alignBottom="@+id/sleep"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/sleep"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/add" />
</RelativeLayout>